redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis
  name: redis-service
spec:
  type: ClusterIP
  ports:
    - name: redis-service
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    name: redis-service
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
         name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis
          image: redis:6.2-bullseye
          command:
            - redis-server
          args:
            - /etc/redis/redis.conf
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /var/lib/redis
            - name: redis-conf
              mountPath: /etc/redis
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf
            items:
              - key: redis.conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        annotations:
          storageclass.kubernetes.io/is-default-class: "true" 
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
